# Tp2

./: .gitmodules  CMakeLists.txt  INSTALL.md  Makefile  conanfile.txt  config.json  gitmodules.txt  log.txt  pre-commit-config.yaml
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: command.h  intern_command.h  jobs.h  process.h  shell.h  signals.h
src/: command.c  intern_command.c  jobs.c  main.c  process.c  shell.c  signals.c
submodulos/Tp1/: Makefile
submodulos/Tp1/include/: expose_metrics.h  metrics.h
submodulos/Tp1/lib/prometheus-client-c/prom/include/: prom.h
submodulos/Tp1/src/: expose_metrics.c  main.c  metrics.c
tests/: CMakeLists.txt
tests/unit/include/: intern_command_test.h  shell_test.h
tests/unit/src/: intern_command_test.c  shell_test.c  test_main.c
